# elm-build

./: CHANGELOG.md  LICENSE.txt  README.md  elm-build.cabal
app/: Main.hs
src/: Lib.hs
src/Elm/: Build.hs
templates/default/: elm-package.json
templates/default/src/: App.elm  State.elm  Types.elm  View.elm
templates/default/static/: index.html  interop.js
templates/default/test/: StateTest.elm
templates/default/tests/: StateTest.elm  Tests.elm  elm-package.json
