name:                elm-build
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/krisajenkins/elm-build#readme
license:             MIT
license-file:        LICENSE.txt
author:              Kris Jenkins
maintainer:          krisajenkins@gmail.com
copyright:           2016 Kris Jenkins
category:            Web
build-type:          Simple
-- extra-source-files:
data-files:          templates/default/.dir-locals.el
                   , templates/default/.eslintrc.js
                   , templates/default/.gitignore
                   , templates/default/elm-package.json
                   , templates/default/src/App.elm
                   , templates/default/src/State.elm
                   , templates/default/src/Types.elm
                   , templates/default/src/View.elm
                   , templates/default/static/index.html
                   , templates/default/static/interop.js
                   , templates/default/styles/main.less
                   , templates/default/test/Test.elm
                   , templates/default/test/StateTest.elm
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Elm.Build
                     , Elm.Build.NewProject
  other-modules:       Paths_elm_build
  build-depends:       base
                     , directory
                     , extra
                     , formatting
                     , mustache
                     , shake
                     , text
  default-language:    Haskell2010

executable elm-build
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , elm-build
  default-language:    Haskell2010

test-suite elm-build-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , elm-build
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/elm-build
